# depot_tracker

./: .gitignore  Cargo.toml
src/: main.rs
src/depot/: depot.rs  event.rs  ibkr_parser.rs  misc.rs  mod.rs  position.rs  stock_split.rs  trade.rs  transaction.rs  transaction_link.rs
src/instruments/: data_provider.rs  has_instrument.rs  instrument.rs  instrument_data.rs  instrument_list.rs  instrument_spec.rs  mod.rs  stock.rs  stock_option.rs
src/properties/: close_date.rs  formatted_property.rs  market_value.rs  mod.rs  name.rs  open_date.rs  position_size.rs  price.rs  profit.rs  property.rs
src/stock_data/: candle_data.rs  mod.rs  sorted_candles.rs  stock_data.rs
src/stock_data/sources/: alpha_vantage.rs  data_source.rs  local_file.rs  mod.rs  utils.rs
src/visu/: depot_tracker.rs  mod.rs  overview.rs  tab.rs  table_builder.rs  trades.rs
src/visu/filters/: instrument_type_filter.rs  mod.rs  symbol_filter.rs
src/visu/tabs/: instruments.rs  mod.rs  overview.rs  tab.rs  trades.rs
