[package]
name = "depot_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
csv = "1.3"
eframe = "0.31"
egui_extras = "0.31"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
url = "2.5"